# backend/routes/userRoutes.js
@@ -8,7 +8,7 @@ const sendResponse = require('../utils/sendResponse.js');
 
 router.post('/register', registerUser);
 router.post('/login', loginUser);
-router.get('/authenticate-test', authenticate, (req, res) => {
+router.get('/isLoggedIn', authenticate, (req, res) => {
   sendResponse(res, 200, true, 'Authentication successful', { user: req.user });
 });
 
